# fastworkflow

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_CHANGES.md  README.md  SECURITY_VULNERABILITY_REPORT.md  WEC_learning_checklist.md  fastworkflow-article-1.md  fastworkflow-article-2.md  fastworkflow-article-3.md  fastworkflow-article-4.md  gen-env.sh  inference_log.jsonl  makefile  pyproject.toml  specific_test_failures.md  test_failure_analysis_report.md
.___speedict/workflowid_2_sessiondata_map/: rdb.pkl
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads.backup/: metadata.json
.beads/.dolt/: sql-server.info
.cursor/rules/: agent-development-guide.md  agent-development-guide.mdc  context-model-design.mdc  delegated-agent-architecture.md  delegated-agent-architecture.mdc  mcp-integration-architecture.md  mcp-integration-architecture.mdc  mcp-integration-patterns.md  mcp-integration-patterns.mdc  mcp-tools-development.md  mcp-tools-development.mdc  migration_to_single_file_command_impl.mdc  taskmaster.mdc  testing-patterns.mdc  testing_rules.mdc  workflow-command-structure.md  workflow-command-structure.mdc
.github/workflows/: train-modern-stack.yml
.speedict/workflowid_2_sessiondata_map/: db
agent-directory/: 01_hello_world_agent.yaml  02_messaging_agent.yaml  03_todo_manager_agent.yaml  04_calculator_agent.yaml  05_file_manager_agent.yaml  06_data_validator_agent.yaml  07_text_processor_agent.yaml  08_logger_agent.yaml  09_notification_agent.yaml  10_scheduler_agent.yaml  11_database_connector_agent.yaml  12_rest_api_agent.yaml  13_email_integration_agent.yaml  14_slack_integration_agent.yaml  15_github_integration_agent.yaml  16_aws_integration_agent.yaml  17_google_cloud_integration_agent.yaml  18_stripe_payment_agent.yaml  19_twilio_sms_agent.yaml  20_sendgrid_email_agent.yaml  21_retail_workflow_agent.yaml  22_chat_room_agent.yaml  23_work_item_manager_agent.yaml  24_approval_workflow_agent.yaml  25_document_processing_agent.yaml  26_etl_pipeline_agent.yaml  27_customer_onboarding_agent.yaml  28_incident_management_agent.yaml  29_cicd_pipeline_agent.yaml  30_lead_management_agent.yaml  31_healthcare_patient_agent.yaml  32_financial_trading_agent.yaml  33_legal_document_agent.yaml  34_hr_recruitment_agent.yaml  35_real_estate_listing_agent.yaml  36_education_course_agent.yaml  37_insurance_claims_agent.yaml  38_restaurant_ordering_agent.yaml  39_logistics_shipping_agent.yaml  40_manufacturing_production_agent.yaml  (+6 more)
datasets/: __init__.py
docs/: DSPY_CACHE_GUIDE.md  agent_categorization_guide.md  agent_mode_live_command_traces.md  agentic_functionality_integration.md  build_postprocessing_using_dspy.md  command_dependency_graph.md  extending_existing_workflows.md  fastworkflow_fastapi_architecture.md  fastworkflow_fastapi_spec.md  fastworkflow_mcp_server_spec.md  fastworkflow_mcp_server_spec_summary.md  fastworkflow_turns_async_execution_design.md  genai_postprocessor_readme.md  implementing_tau_bench_retail.md  invoke_agent_stream_implementation.md  learning_trajectory_serialization.md  probabilistic_response_generation.md  turn_result_architecture_review.md  turn_result_design.md  turn_result_design_feedback.md  turn_result_design_final.md  turn_result_design_review.md  turn_result_learning_checklist.md  understanding_execution_core_refactor.md  workflow_execution_context_migration.md  workspace_collections.md
dspy/: __init__.py
env/: .env
evaluation/tau_bench/: __init__.py  agent_runner.py  env_adapter.py  evaluate_tau_bench.py  evaluator.py  reporter.py  task_loader.py
examples/: fastworkflow.passwords.env
examples/sample_workflow/: child_cardinality.json  startup_action.json
examples/todo_list/: README.md  child_cardinality.json  context_hierarchy_model.json  startup_action.json  todo_list.json
fastworkflow/: TinyBerttesrt.py  __init__.py  active_workflow.py  agent_integration.py  cache_matching.py  chat_session.py  cli.py  command_context_model.py  command_directory.py  command_executor.py  command_interfaces.py  command_metadata_api.py  command_name_extraction.py  command_name_prediction.py  command_router.py  command_routing.py  command_routing_definition.py  command_source.py  context_model_loader.py  conversation_history_io.py  fastworkflow_train.py  intent_clarification_agent.py  mcp_server.py  model_pipeline_training.py  parameter_extraction.py  probabilistic_response.py  semantic_router_definition.py  session.py  session_state_store.py  speedict_shim_note.txt  start_workflow.py  turn.py  user_message_queues.py  utterance_definition.py  workflow.py  workflow_agent.py  workflow_definition.py  workflow_execution_context.py  workflow_inheritance_model.py  workflow_session.py
fastworkflow/run/: __main__.py
jwt_keys/: .gitignore
services/: conversation_store.py
speedict/: __init__.py
tests/: README.md  conftest.py  debug_annotated_structure.py  test_active_workflow_nesting.py  test_agent_categorization.py  test_agent_collections.py  test_agent_integration.py  test_ambiguous_intent_regression.py  test_annotated_fields.py  test_chat_adapter_commands.py  test_command_context_serialization_spike.py  test_command_dependency_graph.py  test_command_directory.py  test_command_directory_cme.py  test_command_executor.py  test_command_executor_delegation.py  test_command_executor_errors.py  test_command_metadata_api.py  test_command_router.py  test_command_routing.py  test_command_routing_definition.py  test_context_expander.py  test_context_model.py  test_context_model_loader.py  test_execution_context_agent.py  test_execution_context_concurrency.py  test_fastapi_service.py  test_fastapi_topology_b.py  test_fastapi_turns_async.py  test_genai_postprocessor.py  test_genai_postprocessor_integration.py  test_genai_postprocessor_integration_updated.py  test_genai_postprocessor_updated.py  test_libcst_integration.py  test_libcst_transformers.py  test_litellm_proxy_routing.py  test_mcp_server_integration.py  test_mcp_token_generation.py  test_parameter_extraction_error_regression.py  test_probes.py  (+19 more)
workspaces/: README.md
(+622 files in other folders)
