[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/radiantlogicinc/fastworkflow"
repository = "https://github.com/radiantlogicinc/fastworkflow"
# documentation = "https://fastworkflow.ai/readthedocs"

[tool.poetry]
name = "fastworkflow"
version = "2.19.0"
description = "A framework for rapidly building large-scale, deterministic, interactive workflows with a fault-tolerant, conversational UX"
authors = ["Dhar Rawal <drawal@radiantlogic.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["fastworkflow", "ai", "workflow", "llm", "openai"]
include = [
    "fastworkflow/examples/fastworkflow.env",
    "fastworkflow/examples/fastworkflow.passwords.env",
    "fastworkflow/_commands/.gitkeep"
]
exclude = [
    "**/___command_info",
    "**/___workflow_contexts",
    "./.env",
    "**/simple_workflow_template/tests"
]

[tool.poetry.scripts]
fastworkflow = "fastworkflow.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.9.2"
speedict = "^0.3.12"
python-dotenv = "^1.2.2"  # CVE-2026-28684 (set_key/unset_key symlink overwrite)
scikit-learn = "^1.6.1"
# Allow transformers 5.x (downstream apps pin >=5,<6). The intent-detection
# trainer no longer relies on the slow->fast tokenizer conversion path that
# transformers 5.x removed (see model_pipeline_training._load_tokenizer).
transformers = ">=4.48.2,<6.0.0"
# sentencepiece is required by transformers 5.x to instantiate some tokenizers
# (it replaced the in-tree slow->fast conversion path). Declared here so users
# never have to add it manually.
sentencepiece = "^0.2.0"
mmh3 = "^5.1.0"
python-levenshtein = "^0.27.1"
colorama = "^0.4.6"
dspy = "^3.0.1"
torch = "^2.7.1"
prompt_toolkit = "^3.0.43"
libcst = "^1.8.2"
openai = ">=2.8.0"
# CORE depends on PLAIN litellm (no proxy extra). fastworkflow uses litellm only
# as a client (via dspy.LM and litellm.completion); it never runs a litellm proxy
# SERVER. The old `litellm[proxy]` extra dragged in the full proxy stack
# (fastapi-sso, gunicorn, apscheduler, litellm-enterprise, mcp, ...) AND pinned
# python-multipart, which combined with our python-multipart>=0.0.27 floor forced
# a prerelease (1.88.0rc1). Plain litellm lets the resolver pick a STABLE release
# and lets downstreams pin e.g. litellm>=1.83.11,<1.84.0 without the proxy extra.
# CVE coverage (CVE-2026-35029/35030/42203/42271 + GHSA-69x8-hrgq-fjj8) is satisfied
# by stable litellm >=1.83.7. Proxy-server deps now live in the optional `server` extra.
litellm = ">=1.83.7,<2.0.0"
# ---- Optional `server` extra (FastAPI-MCP service: `fastworkflow run_fastapi_mcp`) ----
uvicorn = {version = ">=0.33.0", optional = true}
fastapi = {version = ">=0.120.1", optional = true}
fastapi-mcp = {version = "^0.4.0", optional = true}
pyjwt = {extras = ["crypto"], version = ">=2.13.0", optional = true}  # Replaces python-jose (CVE-2024-23342); >=2.13.0 fixes alg allow-list bypass (PYSEC-2026-176) + DoS (PYSEC-2026-175/177/178/179)
python-multipart = {version = ">=0.0.27", optional = true}  # CVE-2026-40347, CVE-2026-42561 (multipart parsing DoS). Only pulled by the `server` extra (FastAPI form parsing); not needed by the client/core install.
starlette = {version = ">=0.49.1", optional = true}  # CVE-2025-62727, CVE-2025-54121 (Range header DoS). Pulled transitively by fastapi in the `server` extra.
datasets = {version = "^4.0.0", optional = true}

# Security floor constraints for transitive dependencies of the CORE (client) install.
# These ensure users get patched versions even though these are not direct deps.
# NOTE: floors that only applied to the litellm proxy SERVER (python-multipart,
# pyjwt, uvicorn, starlette) are scoped to the `server` extra above. Floors that
# only existed because `litellm[proxy]` pulled the package (mako -> alembic,
# pynacl, fastapi-sso) have been dropped: with the proxy extra gone those packages
# are no longer in the dependency graph for any fastworkflow install (core OR
# server), so there is nothing to patch and no CVE regression.
orjson = ">=3.11.6"      # CVE-2024-27454 (loads recursion) + CVE-2025-67221 (dumps recursion DoS, fixed in 3.11.6)
urllib3 = ">=2.7.0"      # CVE-2025-66418, CVE-2025-66471 (decompression chain) + PYSEC-2026-141/142
aiohttp = ">=3.13.4"     # CVE-2025-69223 + 7 others (zip bomb, DoS) + CVE-2026-22815/34513-34525 (3.13.4)
pyasn1 = ">=0.6.3"       # CVE-2026-23490 + CVE-2026-30922 (decoder DoS)
filelock = ">=3.20.1"    # CVE-2025-68146 (TOCTOU symlink)
cryptography = ">=46.0.7"  # CVE-2026-26007 + PYSEC-2026-35/36
requests = ">=2.33.0"    # CVE-2026-25645 (extract_zipped_paths temp reuse)
idna = ">=3.15"          # CVE-2026-45409
pygments = ">=2.20.0"    # CVE-2026-4539 (ReDoS in AdlLexer)
pyarrow = ">=23.0.1"     # PYSEC-2026-113 (use-after-free; only via datasets/training extra)

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^26.3.1"  # CVE-2026-32274
flake8 = "^7.1.1"
pylint = "^3.3.1"
mypy = "^1.13.0"
bandit = "^1.7.10"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"  # CVE-2025-71176 (tmp dir privilege/DoS)
requests-mock = "^1.12.1"
pytest-cov = "^6.2.1"

# poetry install --with aws if you are using AWS Bedrock for LLM or LLM_AGENT
[tool.poetry.group.aws.dependencies]
boto3 = {version = ">=1.36.0", optional = true}

[tool.poetry.extras]
training = ["datasets"]
# Full FastAPI-MCP server feature set (`fastworkflow run_fastapi_mcp`) with the
# security-patched server deps. `litellm_proxy/` client routing does NOT require
# this extra (plain litellm handles it via api_base).
server = ["uvicorn", "fastapi", "fastapi-mcp", "pyjwt", "python-multipart", "starlette"]
# Backward-compatible alias for the pre-2.18.2 extra name.
fastapi = ["uvicorn", "fastapi", "fastapi-mcp", "pyjwt", "python-multipart", "starlette"]
